# pySerialMux

./: README.md  pyproject.toml  terminal.py
.github/workflows/: ci.yml  publish-pypi.yml
pySerialMux/: __init__.py  _broker_entry.py  broker.py  protocol.py  proxy.py
pyserial_mux/: _broker_entry.py  proxy.py
tests/: test_broker.py  test_integration.py  test_proxy.py
